[package]
name = "canved"
version = "0.1.0"
authors = ["Sinono3 <aldoacevedo@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.3"
image = "0.23.14"
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
